--- a/sell_backend.html
+++ b/sell_backend.html
@@ -8,7 +8,7 @@
 	$price = $_POST["price"];
 	//print_r($_POST);
 	mysql_connect("localhost","root","password");
-	mysql_select_db("bookshaala");
+	mysql_select_db("LizCosmetics");
 	$query="insert into sell values ('$name', '$author', '$subject', '$price', '$contact', '$email');";
 	if($result= mysql_query($query))	
 		echo "<h1>Successfully added $name in our database. We will update you when the book is ready to sell.</h1>\n<h3>You will now be directed back to the sell page.</h3>" ;
